// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HookCounter/> with enzyme matches snapshot 1`] = `
<HookCounter>
  <div>
    <h2>
      0
    </h2>
    <button
      onClick={[Function]}
    >
      +1
    </button>
    <button
      onClick={[Function]}
    >
      -1
    </button>
  </div>
</HookCounter>
`;

exports[`<HookCounter/> with react-testing-library matches snapshot 1`] = `
<div>
  <div>
    <h2>
      0
    </h2>
    <button>
      +1
    </button>
    <button>
      -1
    </button>
  </div>
</div>
`;
